# ubuntu-release-metrics

./: .gitignore  AGENTS.md  README.md  actions.yaml  bundle.yaml  charm_requirements.txt  charmcraft.yaml  collect  config.yaml  manifest  manifest-upgrade  manifest.yaml  metadata.yaml  pyproject.toml  requirements.txt  rls-bugs  run_tests  tox.ini
.github/workflows/: build-charm.yml  ci.yml  linter.yml  main.yml  pull-request.yml  pytest.yml  tflint.yml
charm/: charm.py  grafana.py  influxdb.py  releasemetrics.py
data/: daemon-reload.service  daemon-reload.timer  pull-metrics.service  pull-metrics.timer  run-metric-collector@.service  start-all-timers.service  start-all-timers.timer
metrics/: basemetric.py
metrics/collectors/autopkgtest/: __init__.py  __main__.py  autopkgtest_collector.py
metrics/collectors/britney/: __init__.py  __main__.py  britney_collector.py
metrics/collectors/cnf/: __init__.py  __main__.py  command_not_found.py
metrics/collectors/contributors/: __init__.py  __main__.py  contributors_collector.py
metrics/collectors/images/: __init__.py  __main__.py  images_collector.py
metrics/collectors/rls_bugs/: __init__.py  __main__.py  rls_bugs_collector.py
metrics/collectors/sponsoring/: __init__.py  __main__.py  sponsoring_collector.py
metrics/collectors/ubuntu_archive/: __init__.py  __main__.py  (+1 more)
metrics/lib/: basemetric.py  errors.py  lp_scrape_mps.py  ubunturelease.py
scripts/: metrics-unit-generator  upgrade-charm
src/: charm.py
terraform/local/: main.tf
tests/: test_charm.py  test_collectors.py
utils/: exec-metric
(+9 files in other folders)
